--- a/css/styles.css
+++ b/css/styles.css
@@ -2,27 +2,8 @@ body{
     font-family: montserrat;
     background: linear-gradient(135deg,#eef2f7,#dfe6f1);
 }
-ul{
-    list-style-type: none;
-    margin: 10px;
-    background-color: rgb(120, 111, 215);
-    max-width: fit-content;
-    display: flex;
-    border-radius: 2px;
-    align-items: center;
-    padding: 20px;
-}
-li a{
-    margin: 0 10px;
-    text-decoration: none;
-    color:white;
-    display: flex;
-    align-items: center;
-    font-weight: bold;
-}
 .main{
-    max-width: 1100px;
-    margin: 40px auto;
+    margin: auto;
     background: white;
     border-radius: 20px;
     padding: 40px;
@@ -32,10 +13,15 @@ li a{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 50px;
     width: 100%;
     box-sizing: border-box;
-    padding: 15px 20px
+    padding: 15px 20px;
+    flex-wrap: wrap;
+}
+.navbar a{
+    text-decoration: none;
+    color: rgb(120, 111, 215);
+    font-weight: bold;
 }
 button{
     background-color: rgb(120, 111, 215);
@@ -54,7 +40,7 @@ button:hover{
     box-shadow: 10px;
 }
 img{
-    width: 80%;
+    width: auto;
     height: auto;
     border-radius: 20px;
     max-width: 200px;
@@ -63,7 +49,6 @@ img{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    align-items: center;
     gap: 20px;
 }
 .ab{
@@ -136,13 +121,19 @@ h4 .ab{
     text-align: center;
 }
 .form{
-    background: white;
+    background-color: #f9f9f9;
     border-radius: 15px;
-    padding: 20px;
+    padding: 25px;
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     gap: 20px;
+    text-align: center;
+    width: 100%;
+    max-width: 400px;
+    margin: 50px auto;
+    border-radius: 10px;
 }
 #submit{
     background-color: rgb(120, 111, 215);
@@ -154,4 +145,32 @@ h4 .ab{
     background: #5e2ecf;
     transform: translateY(-3px);
     box-shadow: 10px;
+}
+.form input{
+    border-color: rgb(120, 111, 215);
+    border-radius: 5px;
+}
+.form input, .form textarea{
+    margin-bottom: 15px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-size: 14px;
+    outline: none;
+}
+.form input:focus, .form textarea:focus{
+    border-color: #007bff;
+}
+.form button{
+    padding: 10px;
+    border: none;
+    border-radius: 6px;
+    background-color: #007bff;
+    color: white;
+    font-size: 15px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+.form button:hover{
+    background-color: #0056b3;
 }
