--- a/css/styles.css
+++ b/css/styles.css
@@ -10,18 +10,20 @@ body{
     align-items: center;
 }
 .navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    position: fixed;
+    top: 0;
     width: 100%;
-    box-sizing: border-box;
-    padding: 15px 20px;
-    flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(120, 111, 215);
+    padding: 15px 0;
+    gap: 20px;
 }
 .navbar a{
     text-decoration: none;
-    color: rgb(120, 111, 215);
-    font-weight: bold;
+    color: white;
+    font-size: 16px;
 }
 button{
     background-color: rgb(120, 111, 215);
