--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ body{
     top: 0;
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     background-color: rgb(120, 111, 215);
