--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 body{
     font-family: montserrat;
     background: linear-gradient(135deg,#eef2f7,#dfe6f1);
@@ -12,13 +15,12 @@ body{
 }
 .navbar{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     width: 100%;
     padding: 15px 0px;
     background: rgb(120, 111, 215);
-    gap: 20px;
-    top: 0;
+    gap: 10px;
 }
 .navbar a{
     text-decoration: none;
@@ -29,6 +31,16 @@ body{
 .navbar a:hover{
     color: #00bcd4;
     transform: translateY(-3px);
+}
+@media (max-width: 600px) {
+    .navbar {
+        flex-direction: column; /* stack links vertically */
+        padding: 10px;
+        gap: 5px;
+    }
+    .navbar a {
+        font-size: 14px; /* smaller font for mobile */
+    }
 }
 button{
     background-color: rgb(120, 111, 215);
