updated the README.md file to meet with project requirements, added footer tag too.

--- a/css/styles.css
+++ b/css/styles.css
@@ -288,3 +288,7 @@ h4 .ab{
 .specialthanks strong:hover{
    color: #5e2ecf;
 }
+footer{
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+}
